# ldl

./: .gitignore  CMakeLists.txt  README.md
cmake/: get_cpp_filenames_module.cmake
examples/: CMakeLists.txt  basic_usage.cpp  composed_rules.cpp
examples/common/: network_headers.hpp
include/ldl/: CMakeLists.txt  object_deserializer.hpp
include/ldl/helpers/: ldl_array_view.hpp  ldl_concepts.hpp  ldl_deserialization_rules.hpp  ldl_reader.hpp
tests/ldl/: CMakeLists.txt  from_built-in_array.cpp  from_span.cpp  from_std_array.cpp  fundamental_tests.cpp  header_composition.cpp
tests/ldl/helpers/: extended_mac_header.hpp  network_headers.hpp  network_packets.hpp  utilities.hpp
